--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyBOiligBFJa8hYXP3vUUtZLS7rBH5D6vEk",
+            apiKey: "AIzaSyBOiligBFJa8bYXP3vUUtZLS7rBH5D6vEk",
             authDomain: "project-5897605956915932287.firebaseapp.com",
             projectId: "project-5897605956915932287",
             storageBucket: "project-5897605956915932287.appspot.com",
@@ -26,21 +26,6 @@
         const db = getFirestore(app);
 
         document.addEventListener('DOMContentLoaded', function() {
-            const otherBankCheckbox = document.getElementById('other_bank_checkbox');
-            const otherBankText = document.getElementById('other_bank_text');
-
-            function toggleOtherBankInput() {
-                if (otherBankCheckbox.checked) {
-                    otherBankText.style.display = 'block';
-                } else {
-                    otherBankText.style.display = 'none';
-                    otherBankText.value = '';
-                }
-            }
-
-            toggleOtherBankInput();
-            otherBankCheckbox.addEventListener('change', toggleOtherBankInput);
-
             const form = document.querySelector('form');
             form.addEventListener('submit', async function(event) {
                 event.preventDefault(); // 防止表單的默認提交行為
@@ -66,10 +51,9 @@
                     // 顯示資料已保存提示
                     alert('資料已保存');
 
-                    // 自動轉向第二頁，使用GET方法將資料傳遞到下一頁
-                    form.action = 'page2.html';
-                    form.method = 'get';
-                    form.submit();
+                    // 自動轉向第二頁，並通過GET方式將資料傳遞過去
+                    const queryString = new URLSearchParams(new FormData(form)).toString();
+                    window.location.href = `page2.html?${queryString}`;
                 } catch (e) {
                     console.error("Error adding document: ", e);
                     alert('資料保存失敗，請重試。');
@@ -165,4 +149,3 @@
     </div>
 </body>
 </html>
-
